create basic html body structure + add css properties to #container div

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     ></script>
   </head>
   <body>
+    <div id="container">
+      <h1>TO-DO LIST</h1>
+      <input type="text" placeholder="Add New Todo" />
+      <ul>
+        <li><span>X</span> Take Medicine</li>
+        <li><span>X</span> Do Some Coding</li>
+        <li><span>X</span> Eat Food</li>
+        <li><span>X</span> Do Some Coding</li>
+        <li><span>X</span> Do Some Exercise/Shower</li>
+        <li><span>X</span> Eat Food</li>
+      </ul>
+    </div>
     <!--self created app.js file-->
     <!--clientside js for browser to execute-->
     <!--NOTE - Should be set at end of body after other clientside js libraries set in head, so we can use their methods in self created app.js file-->
