adding googlefonts css library ie cdn + basic css properties to elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo List</title>
+    <!--preconnect for faster loading later - GET request to third party domain/googlefonts webApiServer-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!--googlefonts clientside css library - googlefonts style.css file/css library cdn-->
+    <!--client side css for browser to execute - GET request to cdn (ie third party domain/googlefonts webApiServer)-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!--self created style.css file-->
     <!--client side css for browser to execute -->
     <!--NOTE - Should be set after other css libraries style.css file so that we can overwrite with our own style.css-->
